Version 5.7.0   unreleased

    * Improve the toString() output for ValidationErrors and InvalidDataException.
    * Fix several more problems with nested tab history and bookmarks.
      - Nested tab panels must now implement IModuleNestedTabPanelView
      - Add new NestedTabSelectionHandler specific to ModuleNestedTabPanelView
      - Add new method IModuleTabPanelView.getSelectedTabView() to better track state

Version 5.6.0   23 Oct 2015

    * Fix several problems with nested tab history and bookmarks.
      - Expose selectTabForView() in the IModuleTabPanelView interface
      - Add new method ModuleNestedTabPanelPresenter.selectThisTab()
      - Fix custom TabLayoutPanel so visual selection indicator works consistently

Version 5.5.0   20 Oct 2015

    * Fix isEnabled() and setEnabled() on the UTCTimeBox and UTCDateBox widgets.
    * Add new method AbstractWidgetUtils.getWidget().
    * Add new method AbstractWidgetUtils.getCodeserver().
    * Add new method AbstractWidgetUtils.setFocusAfterDisplay(Focusable)
    * Add setFocus() methods on AbstractWidgetUtils as aliases for setFocusOnDiplay().
    * Fix the nested tab implementation so it's possible replace nested tabs just like other tabs.
      - Add new class ModuleNestedTabPanelPresenter with different replaceModuleBody()
      - Add new method IModuleTabView.setContext() and deprecate the old version
      - Add new method IModuleTabView.getParentView(), tied to new setContext method()
      - Update ModuleTabView, ModuleTabPanelView, and ModuleNestedTabPanelView for new getContext()

Version 5.4.0   25 Sep 2015

    * Add ModuleNestedTabPanelView, which is both a tab and a tab panel
    * Tweak tab initialization so tabs are only marked as initialized if a handler is invoked.
    * Various refactorings in com.cedarsolutions.client.gwt.module.view:
      - Refactor out ModuleTabUtils, TabPanelResizeHandler, and TabSelectionHandler
      - Deprecate ModuleTabPanelView.TabPanelResizeHandler